# beam-rs

./: CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  build-linux.sh  install.ps1  install.sh
.github/workflows/: release.yml
crates/beam-common/: Cargo.toml
crates/beam-common/src/: lib.rs
crates/beam-common/src/auth/: nostr_pin.rs
crates/beam-common/src/core/: beam.rs  transfer.rs
crates/beam-common/src/tui/: mod.rs
crates/beam-rs/: Cargo.toml
crates/beam-rs-tor/: Cargo.toml
crates/beam-rs-tor/src/: main.rs
crates/beam-rs/src/: main.rs
crates/beam-rs/src/auth/: nostr_pin.rs  pin.rs
crates/beam-rs/src/iroh/: common.rs  receiver.rs  sender.rs
crates/beam-rs/src/onion/: sender.rs
crates/beam-rs/src/signaling/: nostr_protocol.rs
docs/: ARCHITECTURE.md  ROADMAP.md  USE_CASES.md
src/: lib.rs  main.rs
src/auth/: lan.rs  mod.rs  nostr_pin.rs  pin.rs  pin_record.rs  rendezvous.rs  serverless_code.rs  spake2.rs
src/cli/: instructions.rs
src/core/: beam.rs  folder.rs  resume.rs  transfer.rs
src/iroh/: common.rs  receiver.rs  sender.rs
src/onion/: receiver.rs  sender.rs
src/tui/: mod.rs
src/ui/: mod.rs
tests/: transfer_test.rs
