[workspace]
resolver = "2"
members = [
    "crates/beam-common",
    "crates/beam-rs",
    "crates/beam-rs-tor",
]

[workspace.package]
version = "0.0.19"
edition = "2024"

[workspace.dependencies]
# Core dependencies shared by all crates
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"

# File handling
tempfile = "3"

# CLI (shared by the binary crates)
clap = { version = "4", features = ["derive"] }

# Tracing (shared by the binary crates)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
