[package]
name = "beam-rs"
version = "0.0.23"
edition = "2024"

[lib]
name = "beam_rs"
path = "src/lib.rs"

[[bin]]
name = "beam-rs"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
spake2 = "0.4"

# File handling / hashing
tar = "0.4"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
crc32fast = "1.4"

# Interactive line prompts in the UI sink
rustyline = "18"

# Inline terminal UI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# Used only on unix (to re-raise SIGINT for graceful cancel), but builds everywhere.
# Pinned to 0.3 to unify with crossterm's transitive signal-hook (avoids a duplicate copy).
signal-hook = "0.3"

# Nostr signaling + HTTP client for relay fetching
nostr-sdk = "0.44.1"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }

# iroh transport
iroh = "1.0.0"
iroh-mdns-address-lookup = "0.4.0"
# Used to probe the host DNS config before binding; see beam_dns_resolver.
# Pinned to the same version iroh pulls in so cargo unifies on one copy.
hickory-resolver = "0.26.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Tor/Onion transport
arti-client = { version = "0.43", features = ["onion-service-service", "onion-service-client", "tokio", "static-sqlite"] }
tor-hsservice = "0.43"
tor-cell = "0.43"
safelog = "0.8"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
