[package]
name = "beam-rs"
version = "0.0.26"
edition = "2024"

[lib]
name = "beam_rs"
path = "src/lib.rs"

[[bin]]
name = "beam-rs"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
log = "0.4"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
spake2 = "0.4"

# File handling / hashing
tar = "0.4"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
crc32fast = "1.4"

# Interactive line prompts
rustyline = "18"

# Nostr PIN rendezvous
nostr-sdk = { version = "0.44.1", features = ["nip44"] }

# iroh transport
iroh = "1.0.2"
iroh-mdns-address-lookup = "0.4.0"
swarm-discovery = "0.6.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Tor/Onion transport
arti-client = { version = "0.43", features = ["onion-service-service", "onion-service-client", "tokio", "static-sqlite"] }
tor-hsservice = "0.43"
tor-cell = "0.43"
safelog = "0.8"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
