[package]
name = "beam-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "beam-rs"
path = "src/main.rs"

[dependencies]
# Common library
beam-common = { path = "../beam-common", features = ["tui"] }

# Core dependencies (workspace)
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }

# Nostr signaling
nostr-sdk = "0.44.1"

# PIN-based Nostr exchange / SPAKE2 handshake (iroh-only, moved from beam-common)
aes-gcm = "0.10"
argon2 = "0.5"
spake2 = "0.4"
# HTTP client for Nostr relay fetching
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }

# iroh transport
iroh = "1.0.0-rc.1"
iroh-mdns-address-lookup = "0.3.0"
# Used to probe the host DNS config before binding; see beam_dns_resolver.
# Pinned to the same version iroh pulls in so cargo unifies on one copy.
hickory-resolver = "0.26.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Tor/Onion transport
arti-client = { version = "0.43", features = ["onion-service-service", "onion-service-client", "tokio", "static-sqlite"] }
tor-hsservice = "0.43"
tor-cell = "0.43"
safelog = "0.8"

# Tracing
tracing-subscriber = { workspace = true }
